objects/bofc__BOFCManageRecordType__c.object
<CustomObject>
    <fields>
        <fullName>bofc__DeveloperName__c</fullName>
        <label>DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__EMessage__c</fullName>
        <label>EMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__PID__c</fullName>
        <label>PID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__ProfileIDs__c</fullName>
        <label>ProfileIDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__RecordTypeIDVal__c</fullName>
        <label>RecordTypeIDVal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <label>BOFCManageRecordType</label>
    <nameField>
        <label>BOFCManageRecordType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCManageRecordTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>